@@ -829,3 +829,14 @@ bool KPresenterDocIface::refreshSideBar()const
     return doc->refreshSideBar();
 }
 
+bool KPresenterDocIface::displayFiedCode()const
+{
+    return doc->getVariableCollection()->variableSetting()->displayFiedCode();
+}
+
+void KPresenterDocIface::setDisplayFiedCode( bool b)
+{
+    doc->getVariableCollection()->variableSetting()->setDisplayFiedCode( b );
+    doc->recalcVariables(VT_ALL);
+}
+
