@@ -1994,6 +1994,10 @@ void KPrChangeVariableSettingsCommand::changeValue( bool b )
         m_doc->getVariableCollection()->variableSetting()->setDisplayComment(b);
         m_doc->recalcVariables( VT_NOTE );
         break;
+    case VS_DISPLAYFIELDCODE:
+        m_doc->getVariableCollection()->variableSetting()->setDisplayFiedCode(b);
+        m_doc->recalcVariables( VT_ALL );
+        break;
     }
 }
 
