@@ -60,3 +60,4 @@ KPresenter 1.2beta1 -> 1.2 beta 2
 - Add option "Allow cursor in text object protected content"
 - Add import text style support
 - Add save page background image on disk
+- Add display field code (for variable)
